# prayer_app

./: .gitignore  c.out  codegen.sh  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/xyz/trianglecircle/prayer_app/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  nav_hub.dart  prayer_timings.dart
lib/rust_ffi/: bridge_generated.dart  ffi.io.dart
lib/rust_ffi/prayer_timings_api/: Cargo.toml
lib/rust_ffi/prayer_timings_api/crates/salah/src/astronomy/: qiblah.rs  solar.rs
lib/rust_ffi/prayer_timings_api/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
lib/screens/: home.dart  loading.dart  qibla.dart  settings.dart
lib/style/: colors.dart  custom_icons.dart
lib/widgets/: fade_button.dart  fade_widget_button.dart  progress_bar.dart  timing_card.dart  timing_table.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
